wp-content/themes/listable-child-master/style.css
/*
Theme Name: Listable Child Master
Theme URI: https://pixelgrade.com/demos/listable/
Author: Shimul
Author URI: https://pixelgrade.com/
Description: A directory WordPress theme that will help you create and manage a local or global listings site.
Template: listable
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: listable-child-theme
Domain Path: /languages/
Tags: light, white, red

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.

Listable is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
Underscores is distributed under the terms of the GNU GPL v2 or later.
*/

/* ADD YOUR NEW CSS RULES HERE */

/* This file assumes you wish to add new CSS rules that will overwrite the ones in the parent's CSS files
If you wish however, you can copy the whole style.css file from the parent here and hack at it - see functions.php for more details.
In that case please remember that you still need to retain the header above (replace the header of the parent style.css with the one above),
specifically the 'Template: listable' line. */


body{
    font-family: 'Pontano Sans', sans-serif;
    /*font-family: 'Roboto', sans-serif;*/

    /*font-family: 'Indie Flower', cursive;*/
}


/* navigation */

.menu-wrapper a{
    text-decoration: none;
}

/* home page */

.page-template-front_page .search_jobs--frontpage .search-submit {
    font-size: 1.7rem;
    border-radius: 0;
}

.page-template-front_page .top-categories a {
    text-decoration: none;
}

.page-template-front_page .top-categories .cat__icon img {
    border-radius: 0;
}
.page-template-front_page .top-categories .cat__icon svg, .page-template-front_page .top-categories .cat__icon img {
    min-height: 50px;
    min-width: 50px;
}

.search-submit:hover{
    background: #298dc8 !important;
}

.search_jobs--frontpage .search-filter-wrapper:last-of-type input, .search_jobs--frontpage .search-filter-wrapper:last-of-type select, .search_jobs--frontpage .search-filter-wrapper:last-of-type .chosen-single {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
}


.blog-home{
    padding: 50px 0 20px 0;
}

.blog-home .blog-widget-container{
    margin-bottom: 20px;
}


.section-title{
    border-bottom: 1px solid #ec5214;
    color: #ffffff;
    padding: 5px 0;
}

.blog-home .read-more{
    text-decoration: none;
    color: #ec5214;
    font-weight: 900;
}

.blog-home .read-more:hover{
    color: #298dc8;
}

.section-title span{
    background: #ec5214;
    padding: 5px 7px;
}

/* widget section start */

.blog-widget{
    /*background: #F6F6F6;*/
    margin: 15px 0;
    height: 400px;
}

.blog-widget-top{
    position: relative;
}

.blog-widget-top-content{
    position: absolute;
    left: 0;
    bottom: 0;
    padding: 10px 15px;
}

.blog-widget .widget-thumbnail{

}


.blog-widget .widget-thumbnail img {
    width: 100%;
    height: 300px;
}

.blog-category a:hover, .blog-category a:focus, .story-cat a:hover, .story-cat a:focus{
    background: #298dc8;
    color: #ffffff;
}

.gcm-btn{
    border-radius: 0;
    padding: 3px 6px;
    font-size: 12px;
    margin-right: 3px;
    margin-bottom: 3px;
}

.blog-excerpt{
    padding: 10px 0;
    font-weight: 300;
    font-size: 14px;
    letter-spacing: .3px;
    word-spacing: 1px;
    line-height: 22px;
}

.blog-meta{
    font-size: 12px;
    text-transform: uppercase;
    margin-top: 5px;
}

.blog-meta a{
    text-decoration: none;
    color: #ec5214;
}

.blog-meta a:hover{
    color: #298dc8;
}

.blog-meta span{
    margin-right: 10px;
}

.blog-meta .comment-count{
    float: right;
    margin-right: 0;
}

.blog-meta .fa{
    color: #298dc8;
}

.blog-home-title h2{
    color: #2b2b2b;
    font-size: 20px;
    line-height: 27px;
    padding: 0;
    margin: 0;
    text-transform: capitalize !important;
}

.blog-home-title a:hover{
    text-decoration: none;
}

.blog-home-title h2:hover{
    color: #298dc8;
}


button#load-more{
    margin: 20px 0;
    background: #ec5214;
    border-radius: 0 ;
}

button#load-more:hover{
    background: #298dc8;
}

/* widget section end */

/* featured stories home */



.blog-home .widget-title, .story-container .widget-title{
    border-bottom: 1px solid #2b2b2b;
    color: #ffffff;
    padding: 5px 0;
}

.blog-home .widget-title span, .story-container .widget-title span{
    background: #2b2b2b;
    padding: 5px 7px;
}


.widget-title{
    margin-bottom: 20px;
}




/* footer */

.site-info > * {
    font-size: 1.5rem;
}


/* accesspress plugins */

/* plugin styles */

a.apsc-facebook-icon {
    background: #4c66a4 none repeat scroll 0 0;
    color: #fff;
    display: block;
    text-decoration: none;
}
div.apsc-inner-block {
    padding: 10px 15px 8px;
}
span.social-icon i {
    border-right: 1px solid;
    font-size: 25px;
    margin-right: 15px;
    padding-right: 15px;
}
span.media-name {
    display: none;
}
span.apsc-count {
    font-size: 20px;
}
.apsc-media-type {
    float: right;
    font-size: 15px;
    padding-top: 2px;
    text-transform: uppercase;
    vertical-align: middle;
}
a.apsc-twitter-icon {
    background: #2fc2ef none repeat scroll 0 0;
    color: #fff;
    display: block;
    text-decoration: none;
}
a.apsc-google-plus-icon {
    background: #D34836 none repeat scroll 0 0;
    color: #fff;
    display: block;
    text-decoration: none;
}
a.apsc-youtube-icon {
    background: #CC181E none repeat scroll 0 0;
    color: #fff;
    display: block;
    text-decoration: none;
}
.apsc-each-profile {
    margin-bottom: 15px;
}

/*  video widget  */

.more-videos iframe, .featured-video iframe{
    margin-bottom: 10px;
}

.video-cover{
    margin-bottom: 20px;
    border: 5px solid #298dc8;
    position: relative;
    transition: border 0.5s ease;
}

.video-cover:hover{
    margin-bottom: 20px;
    border: 5px solid #ec5214;
}

.video-cover .fa{
    filter: brightness(100%);
    position: absolute;
    top:30%;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2;
    color: #ec5214;
    font-size: 100px;
}

.video-cover img{
    filter: brightness(50%);
}

h4.video-title{
    text-transform: capitalize;
    line-height: 25px;
    font-weight: 700;
}

h4.modal-video-title{
    font-size: 14px;
}



/* single post styles */

.section-top{
    width:100%;
    height:500px;
    overflow:hidden;
    position:relative;
}

.section-top img{
    width: 100%;
    object-fit: cover;
    filter: brightness(50%);
}

.section-top .story-header{
    position: absolute;
    top: 30%;
    left: 0;
    right: 0;
    margin: 0 auto;
    padding: 0 5%;
}

.story-header .story-cat, .published-by{
    text-align: center;
}

.section-top h1.story-title{
    color: #ffffff;
    text-align: center;
    font-size: 60px;
    font-family: 'Oswald', sans-serif;
    line-height: 70px;
    text-transform: uppercase;
}
.story-header .published-by{
    margin-top: 30px;
}
.story-header .published-by span{
    color: #ffffff;
    border-top: 1px solid #ffffff;
    padding-top: 5px;
}


.story-container{
    padding-top: 30px;
}

.story-container .story-meta{
    border-top: 1px solid #e2e2e2;
    border-bottom: 1px solid #e2e2e2;
    padding: 15px;
    margin-bottom: 20px;
    margin-top: 10px;
}
.story-container .story-meta a{
    color: #ec5214;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 14px;
    margin-left: 5px;
}

.story-container .story-meta .fa{
    color: #298dc8;
}

.story-container .story-meta .story-share{
    float: right;
    text-transform: uppercase;
    font-size: 12px;
    line-height: 8px;
}

.story-container .story-meta .story-share .fa{
    margin: 0 5px;
    font-size: 20px;
}

.story-container .story-content{
    color: #2b2b2b;
}

.story-container .story-content h1,.story-container .story-content h2,.story-container .story-content h3,.story-container .story-content h4{
    color: #2b2b2b;
    font-family: 'Oswald', sans-serif;
}

.story-container .story-content h1{
    line-height: 45px;
}
.story-container .story-content h2{
    line-height: 40px;
}
.story-container .story-content h3{
    line-height: 35px;
}


.story-container .story-content p{
    letter-spacing: .8px;
    word-spacing: .8px;
    font-size: 16px;
    line-height: 25px;
    margin: 20px 0;
}

.story-container .story-content p:first-child::first-letter {
    float: left;
    border: 1px solid #2b2b2b;
    float: left;
    margin-bottom: 10px;
    margin-right: 15px;
    padding: 12px 18px;
    font-size: 40px;
    font-family: 'Pontano Sans', sans-serif;
    font-weight: 900;

}

.story-container .story-content blockquote {
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 50px;
    padding-left: 15px;
    border-left: 3px solid #ec5214;
    font-family: 'Pontano Sans', sans-serif;
    font-size: 14px;
}

.about-author{
    border: 1px solid #e2e2e2;
    padding: 10px;
    margin-top: 20px;
}

.about-author h3.user-name{
    margin: 0 0 8px 0;
    color: #2b2b2b;
    font-family: 'Oswald', sans-serif;
}
.about-author h3.view-all-post{
    font-size: 14px;
}

.about-author h3.view-all-post a{
    text-decoration: none;
    text-transform: uppercase;
}

.next-pre{
    margin-top: 20px;
    margin-bottom: 20px;
}

.next-pre a:hover{
    background: #298dc8;
    color: #ffffff;
}

.next-pre .previous-post{
    float: right;
}

.similar-story{
    margin-top: 20px;
}

.single-post .alignright {
    margin-right: 0;
}
.alignright {
    margin-right: 0;
}


/* media query */

/* mobile */

@media (max-width: 768px) {

    .featured-stories .featured-widget-thumbnail{
        margin-bottom: 10px;
    }

    .section-top{
        width:100%;
        height:190px;
        overflow:hidden;
        position:relative;
    }

    .section-top .story-header{
        top: 10px;
    }


    .section-top h1.story-title{
        font-size: 16px;
        line-height: 20px;
    }

    .story-container .story-meta{
        margin-top: 0;
        font-size: 12px;
    }

    .story-container .story-meta a{
        font-size: 12px;
    }

    .story-container .story-meta .story-share{
        font-size: 12px;
    }

    .story-container .story-meta .story-share .fa{
        font-size: 14px;
    }

    .story-container .story-content blockquote {
        margin-top: 5px;
        margin-bottom: 5px;
        margin-left: 10px;
    }

    .about-author {
        margin-bottom: 15px;
    }

    .about-author h3.user-name{
        font-size: 14px;
        margin-bottom: 2px;
    }
    .about-author h3.view-all-post{
        font-size: 10px;
        margin: 0;
    }

    .about-author p{
        font-size: 12px;
        line-height: 14px;
        margin-bottom: 2px;
    }

    .more-videos iframe, .featured-video iframe{
        width: 100%;
        height: auto;
    }


}

/* desktop */

@media (min-width: 768px) {

}

/* tab */
@media (min-width: 768px) and (max-width: 992px) {

    .blog-home-title h2{
        font-size: 14px;
        padding: 3px 5px;
    }

    .blog-widget .widget-thumbnail img {
        width: 100%;
        height: 130px;
    }
    .blog-category{
        display: none;
    }

    .blog-excerpt{
        font-size: 12px;
    }

    .blog-widget{
        height: 250px;
    }

    .blog-meta{
        font-size: 10px;
    }


    .story-container .story-meta{
        margin-top: 8px;
        font-size: 12px;
    }

}

